--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -11,8 +11,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Download the dataset from HuggingFace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset conll2003 (/home/ronen/.cache/huggingface/datasets/conll2003/conll2003/1.0.0/9a4d16a94f8674ba3466315300359b0acd891b68b6c8743ddf60b9c702adce98)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 553.78it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset(\"conll2003\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train': ['id', 'tokens', 'pos_tags', 'chunk_tags', 'ner_tags'],\n",
+       " 'validation': ['id', 'tokens', 'pos_tags', 'chunk_tags', 'ner_tags'],\n",
+       " 'test': ['id', 'tokens', 'pos_tags', 'chunk_tags', 'ner_tags']}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.set_format(\"torch\")\n",
+    "dataset.column_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '0',\n",
+       " 'tokens': ['EU',\n",
+       "  'rejects',\n",
+       "  'German',\n",
+       "  'call',\n",
+       "  'to',\n",
+       "  'boycott',\n",
+       "  'British',\n",
+       "  'lamb',\n",
+       "  '.'],\n",
+       " 'pos_tags': tensor([22, 42, 16, 21, 35, 37, 16, 21,  7]),\n",
+       " 'chunk_tags': tensor([11, 21, 11, 12, 21, 22, 11, 12,  0]),\n",
+       " 'ner_tags': tensor([3, 0, 7, 0, 0, 0, 7, 0, 0])}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "dataset['train'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### EDA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -107,8 +197,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
