--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2080,6 +2080,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset conll2003 (/home/ronen/.cache/huggingface/datasets/conll2003/conll2003/1.0.0/9a4d16a94f8674ba3466315300359b0acd891b68b6c8743ddf60b9c702adce98)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 786.58it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'tokens': ['EU',\n",
+       "  'rejects',\n",
+       "  'German',\n",
+       "  'call',\n",
+       "  'to',\n",
+       "  'boycott',\n",
+       "  'British',\n",
+       "  'lamb',\n",
+       "  '.'],\n",
+       " 'ner_tags': tensor([3, 0, 7, 0, 0, 0, 7, 0, 0])}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset(\"conll2003\")\n",
+    "dataset.set_format(\"torch\", columns=[\"tokens\", \"ner_tags\"])\n",
+    "dataset['train'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"bert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We chose this pretrained model because bert is a good base model for NER, even appearing in the original paper. \\\n",
+    "the uncased version is suitable for ner because many NERs are upper case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize_and_align_labels(examples):\n",
+    "    tokenized_inputs = tokenizer(examples[\"tokens\"], truncation=True, is_split_into_words=True)\n",
+    "\n",
+    "    labels = []\n",
+    "    for i, label in enumerate(examples[f\"ner_tags\"]):\n",
+    "        word_ids = tokenized_inputs.word_ids(batch_index=i)  # Map tokens to their respective word.\n",
+    "        previous_word_idx = None\n",
+    "        label_ids = []\n",
+    "        for word_idx in word_ids:  # Set the special tokens to -100.\n",
+    "            if word_idx is None:\n",
+    "                label_ids.append(-100)\n",
+    "            elif word_idx != previous_word_idx:  # Only label the first token of a given word.\n",
+    "                label_ids.append(label[word_idx])\n",
+    "            else:\n",
+    "                label_ids.append(-100)\n",
+    "            previous_word_idx = word_idx\n",
+    "        labels.append(label_ids)\n",
+    "\n",
+    "    tokenized_inputs[\"labels\"] = labels\n",
+    "    return tokenized_inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                   \r"
+     ]
+    }
+   ],
+   "source": [
+    "# convert dataset to ids\n",
+    "for name in ['train', 'validation', 'test']:\n",
+    "    dataset[name] = dataset[name].map(tokenize_and_align_labels, batched=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
